--- a/html/index.html
+++ b/html/index.html
@@ -14,29 +14,13 @@
     <title>Doc FTP</title>
   </head>
   <body>
-    <h1>Index of /</h1>
-
-    <div class="container">
-      <div class="row align-items-start">
-        <div class="col">Name</div>
-        <div class="col">Lest modified columns</div>
-        <div class="col">Size</div>
-        <div class="col">Description</div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col">One of three columns</div>
-        <div class="col">One of three columns</div>
-        <div class="col">One of three columns</div>
-        <div class="col">Description</div>
-      </div>
-      <div class="row align-items-end">
-        <div class="col">One of three columns</div>
-        <div class="col">One of three columns</div>
-        <div class="col">One of three columns</div>
-      </div>
-      <div class="col">Description</div>
-    </div>
-
+    <h1>Repositorio /</h1>
+    <section class="grid-1">
+      <div class="item-1">👩🏽</div>
+      <div class="item-2">👗</div>
+      <div class="item-3">👕</div>
+      <div class="item-4">👡</div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
